--- a/src/components/Cards/Card/styled.css
+++ b/src/components/Cards/Card/styled.css
@@ -1,4 +1,7 @@
 .people_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 200px;
   border: 1px solid gray;
   border-radius: 8px;
