--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 main {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .pokemon-card {
   margin: 30px;
   width: 300px;
   border: 1px solid black;
+}
+
+.card-headers {
+  font-weight: bold;
 }
