--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,10 @@
 .container {
   display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 648px) {
+    flex-direction: column;
+  }
 }
 
 .logo {
