feat: done task

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@ body {
   margin: unset;
   font-family: 'Roboto', sans-serif;
 }
+
+button {
+  background: #fff;
+  cursor: pointer;
+  border: 1px solid #000;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-family: 'Roboto', sans-serif;
+}
