--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,7 +1,8 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+  gap: 8px;
   padding: 0px 20px;
   width: 100%;
   height: 64px;
@@ -70,4 +71,8 @@
   justify-content: center;
   border: 1px solid #000;
   border-radius: 0px 4px 4px 0px;
+}
+
+.text-field-container {
+  display: flex;
 }
