--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ main {
   flex-wrap: wrap;
 }
 
-.pokemon-card {
+.product-card {
   margin: 30px;
   padding-bottom: 10px;
   border: 1px solid black;
@@ -46,15 +46,15 @@ main {
   overflow: hidden;
 }
 
-.card-headers {
+.product-price {
   font-weight: bold;
 }
 
-.character-name {
+.product-name {
   text-align: center;
 }
 
-.character-info {
+.product-info {
   width: 300px;
   padding: 0 0 5px 10px;
   margin: 0;
@@ -72,4 +72,10 @@ main {
 .loader {
   display: block;
   width: 300px;
+}
+
+.product-image {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
 }
