feat: add pagination

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,16 @@ header {
 }
 
 .search-input {
+  height: 40px;
   margin: 0 10px 10px 0;
   padding: 0 10px;
   font-size: 24px;
   line-height: 1.5;
   border-radius: 20px;
+}
+
+.number-input {
+  width: 250px;
 }
 
 .header-button {
@@ -32,7 +37,7 @@ header {
   cursor: pointer;
 }
 
-main {
+.main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -44,6 +49,7 @@ main {
   border: 1px solid black;
   border-radius: 20px;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .product-price {
@@ -52,6 +58,7 @@ main {
 
 .product-name {
   text-align: center;
+  width: 300px;
 }
 
 .product-info {
@@ -78,4 +85,39 @@ main {
   width: 300px;
   height: 300px;
   object-fit: cover;
+}
+
+.pagination-pages {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination-page {
+  margin-right: 5px;
+  padding: 0 10px;
+  font-size: 24px;
+  line-height: 1.5;
+  background-color: lightyellow;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.pagination-page-current {
+  border: 2px solid red;
+  font-weight: bold;
+}
+
+.detailed-product-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.product-page {
+  margin-left: auto;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.51);
 }
