--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,39 @@
 .main {
   display: flex;
-  flex-direction: column;
   flex: 1;
   background-color: $bg-color;
+}
+
+.container {
+  display: flex;
+  column-gap: 1rem;
+  width: 100%;
+}
+
+.leftSection {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.rightSection {
+  display: flex;
+  flex-direction: column;
+  max-width: 480px;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow:
+    0 2px 1px -1px #0003,
+    0 1px 1px #00000024,
+    0 1px 3px #0000001f;
+  background-color: $white-color;
+  overflow: scroll;
 }
