--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,19 +1,18 @@
 .container {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  // flex: 1;
   padding: 1rem;
 }
 
 .form {
   display: flex;
   align-items: center;
-  justify-content: center;
-  column-gap: 10px;
+  column-gap: 1rem;
 }
 
 .input {
-  width: 50%;
+  width: 100%;
   padding: 10px;
   color: $black-color;
   border: 1px solid $grey-color;
