--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   background: linear-gradient(90deg, #b9deed, #efefef);
 }
 
+a {
+  color: initial;
+  text-decoration: none;
+}
+
 header {
   display: flex;
   flex-wrap: wrap;
@@ -38,13 +43,18 @@ header {
 }
 
 .main {
+  margin: 30px 0;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
 .product-card {
-  margin: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 415px;
   padding-bottom: 10px;
   border: 1px solid black;
   border-radius: 20px;
@@ -57,6 +67,7 @@ header {
 }
 
 .product-name {
+  margin: 0;
   text-align: center;
   width: 300px;
 }
